# neuro-workflow

./: .gitignore  CLAUDE.md  CUSTOM_NODE_TUTORIAL.md  CustomNodeTemplate.py  DEVELOPMENT_ROADMAP.md  HACKATHON_SETUP.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MERGE_COMPLETE.md  NODE_CREATION_GUIDE.md  NODE_MANAGEMENT_GUIDE.md  NODE_SCHEMA.md  PROJECT_STATUS_REPORT.md  QUICK_MERGE_GUIDE.md  README.md  README_bk.md  compare_upstream.sh  env_at_workflow_backend  env_at_workflow_frontend  environment.yml  install_docker.sh  pyproject.toml  requirements-hackathon.txt  setup_hackathon.sh  sync_with_upstream.sh  test_features_quick.py  test_installation.py
brainscaler/: README.md  env_brainscaler_frontend.txt
docs/: ARCHITECTURE.md  ARCHITECTURE_FULL.md  BRAINSCALER_BYOK_REPORT.md  BRAINSCALER_GRAPH_RAG_REPORT.md  BRAINSCALER_REPOS.md  NODE_CONNECTIONS_GUIDE.md  NOTEBOOK_CHAT_AGENT.md  (+6 more)
gui/workflow_backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.jupyter  README.md  docker-compose.yml  entrypoint.sh  env.template  pyproject.toml  pytest.ini  requirements.txt
gui/workflow_backend/django-project/app/auth/: authViews.py  authentication.py
gui/workflow_backend/django-project/app/box/: models.py  serializers.py  services.py  urls.py  views.py
gui/workflow_backend/django-project/app/box/migrations/: 0001_initial.py  0002_alter_pythonfile_category.py  0003_alter_pythonfile_category.py  0004_alter_pythonfile_category.py  0005_alter_pythonfile_category.py
gui/workflow_backend/django-project/app/box/services/: python_analyzer.py  python_file_service.py
gui/workflow_backend/django-project/app/catalog/: apps.py  mdb_client.py  serializers.py  tests.py  urls.py  views.py
gui/workflow_backend/django-project/app/chat/: admin.py  models.py  serializers.py  urls.py  views.py
gui/workflow_backend/django-project/app/chat/migrations/: 0001_initial.py
gui/workflow_backend/django-project/app/chat/services/: chat_orchestrator.py  mcp_client.py  openai_client.py
gui/workflow_backend/django-project/app/metadata/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
gui/workflow_backend/django-project/app/metadata/migrations/: 0001_initial.py
gui/workflow_backend/django-project/app/workflow/: code_generation_service.py  jupyter_execution_service.py  models.py  path_utils.py  permissions.py  run_workflow_service.py  serializers.py  services.py  urls.py  views.py
gui/workflow_backend/django-project/app/workflow/execution/: __init__.py  base.py  local_executor.py  remote_slurm_executor.py
gui/workflow_backend/django-project/app/workflow/execution/templates/: slurm_wrapper.sh.template
gui/workflow_backend/django-project/app/workflow/management/commands/: create_sample_data.py
gui/workflow_backend/django-project/app/workflow/migrations/: 0001_initial.py  0002_flowproject_visibility.py  0002_flowproject_workflow_context.py  0003_flowproject_reference_hpc_target.py  0003_workflowrun.py  0004_flowproject_hpc_target_flowproject_reference_and_more.py  0005_merge_20260524_1609.py
gui/workflow_backend/django-project/codes/neuroworkflow/agent/: __init__.py  client.py  config.py  loop.py  sdk_tools.py  skills.py  tools.py
gui/workflow_backend/django-project/codes/neuroworkflow/core/: __init__.py  node.py  port.py  schema.py  workflow.py
gui/workflow_backend/django-project/codes/neuroworkflow/utils/: __init__.py  export_examples.py  parameter_metadata_service.py  script_exporter.py  snakemake_generator.py
gui/workflow_backend/django-project/codes/neuroworkflow/utils/job_managers/: __init__.py  base.py
gui/workflow_backend/django-project/codes/neuroworkflow/utils/mcp/: key.json  llm_auto_mcp.ipynb  server.py
gui/workflow_backend/django-project/codes/neuroworkflow/utils/vneumodpy/glm/: adjust_volume_dir.py  tukey_mp.py  tukey_mth.py
gui/workflow_backend/django-project/codes/neuroworkflow/utils/vneumodpy/models/: multivaliate_var_network.py  mvar_init_with_cell_mp.py
gui/workflow_backend/django-project/codes/neuroworkflow/utils/vneumodpy/surrogate/: dbs_multivariate_var.py  vnm_addmul_signals.py  vnm_subject_perm.py  vnm_var_surrogate.py
gui/workflow_backend/django-project/codes/nodes/analysis/: NiftiViewer3DNode.py  SNNbuilder_Raster.py
gui/workflow_backend/django-project/codes/nodes/io/: BMCR_Conn_To_TVB.py
gui/workflow_backend/django-project/codes/nodes/io/viewer_static/: brain_viewer.js
gui/workflow_backend/django-project/codes/nodes/network/: NESTBGNetworkNode.py  NW_Population.py  SNNbuilder_SingleNeuron.py  TVBConnectivitySetUpNode.py  TVBConnectivitySetUpNode_1.py  VNMGenerateGroupSurrogateModelNode.py
gui/workflow_backend/django-project/codes/nodes/simulation/: NESTBGSimulationNode.py  NW_SimConfig.py  SNNbuilder_Simulation.py  SimulateSonataNetworkNode.py  TVBIntegratorNodeV2.py  TVBSimulatorNode.py  VNMSimulatorNode.py
gui/workflow_backend/django-project/codes/nodes/stimulus/: TVBStimuliRegionNodeV2.py
gui/workflow_backend/django-project/config/: config.py  middleware.py  settings.py  urls.py
gui/workflow_backend/django-project/neuroworkflow/: Dockerfile  Dockerfile.nest  build-nest-image.sh  jupyterhub_config.py
gui/workflow_backend/django-project/neuroworkflow/neuro/notebooks/: Test_New_Features.ipynb
gui/workflow_backend/django-project/neuroworkflow/neuro/src/neuroworkflow/core/: schema.py
gui/workflow_backend/django-project/tests/: conftest.py  test_anthropic_proxy.py  test_notebook_agent.py  test_permissions_default.py  test_visibility.py
(+322 files in other folders)
