[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuroworkflow"
version = "0.1.0"
description = "A Python library for building and executing neural simulation workflows"
readme = "README.md"
authors = [
    {name = "NeuroWorkflow Team", email = "info@neuroworkflow.org"}
]
license = {text = "PolyForm-Noncommercial-1.0.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
nest = ["nest-simulator>=3.0"]
visualization = ["matplotlib>=3.4.0", "seaborn>=0.11.0"]
dev = ["pytest>=6.0", "black", "isort", "mypy"]
# BMTK PointNet (NEST) point-neuron stack used by the notebooks/NW_*_PointNeuron
# notebooks. Add the `nest` extra for NEST's PyPI wheel (macOS 15+/Linux x86_64);
# on other platforms install NEST from conda-forge. Note: BMTK currently breaks
# on pandas 3.0 (StringDtype), so the hackathon setup additionally pins
# `pandas<2.3` — kept out of this published extra to avoid a permanent cap.
# See examples/hackathon_202607/pointneuron/README.md.
pointnet = [
    "bmtk>=1.1.0",
    "h5py>=3.10",
    "matplotlib>=3.6.0",
]

[project.scripts]
neuroworkflow = "neuroworkflow.cli.commands:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"